# wintune

./: .editorconfig  .gitignore  AI_CONTEXT.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  new-tweak.md
.github/workflows/: ci.yml
.opencode/plans/: v0.2-roadmap.md
docs/: RUNBOOK.md  backup-manifest-contract.md  cli-spec.md  output-json-contract.md
docs/schemas/: backup-manifest-schema.json  bloat-entry-schema.json  profile-schema.json  snapshot-schema.json  tweak-metadata-schema.json
gui/: README.md
gui-tauri/src/: index.html
gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui-tauri/src-tauri/src/: lib.rs  main.rs  ps.rs
gui-tauri/src/js/: api.js  app.js  apply.js  audit.js  dashboard.js  profiles.js  revert.js
gui-tauri/src/styles/: main.css
gui/WinTune.Gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WinTune.Gui.csproj  app.manifest
gui/WinTune.Gui.Tests/: WinTune.Gui.Tests.csproj
scripts/: Register-ScheduledAudit.ps1  Validate-Schemas.ps1
src/: wintune.ps1
src/data/: bloat-database.json
src/modules/: BackupManager.ps1  Helpers.ps1  Logger.ps1  Profiles.ps1  Reporter.ps1  Scanner.ps1  TweaksEngine.ps1
src/profiles/: base.json  gaming.json  laptop.json  minimal.json  workstation.json
tests/modules/: ApplyRevert.Tests.ps1  BackupManager.Tests.ps1  Contracts.Tests.ps1  ModuleLoading.Tests.ps1  Profiles.Tests.ps1  Reporter.Tests.ps1  Scanner.Tests.ps1  SchemaValidation.Tests.ps1  TweaksEngine.Tests.ps1
(+35 files in other folders)
