[package]
name = "wintune-gui"
version = "0.3.0"
description = "WinTune - Windows 11 optimization utility with Tauri GUI"
authors = ["WinTune"]
edition = "2021"

[lib]
name = "wintune_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
